# Contact_Manager

./: .gitignore  CMakeLists.txt  ContactManager.cpp  ContactManager.h  Contact_Manager.cpp  Contact_Manager.sln  Contact_Manager.vcxproj  Contact_Manager.vcxproj.filters  ContactsModule.ixx  InputHelper.cpp  InputHelper.h  README.md  main.cpp  resource.h
.github/workflows/: cmake-build.yml
include/: ContactBook.h  ContactManager.h  ContactMenu.h  InputHelper.h
src/: ContactBook.cpp  ContactManager.cpp  ContactMenu.cpp  InputHelper.cpp  main.cpp
